ローディング機能追加→layout.blade.php, style.blade.php変更。loading.js追加。

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,6 +14,32 @@
   src: url("font/irohamaru-Medium.ttf") format('truetype');
 }
 
+/********** loading animation **********/
+#loading {
+  width: 100%;
+  height: 100vh;
+  background-color: #fff;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+.spinner-border {
+  color: #7DE7DD;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  height: 100px;
+  width: 100px;
+}
+
+.hidden {
+  display: none;
+}
+
 /********** navbar **********/
 .navbar {
 	border-bottom: 3px solid #7DE7DD;
